se agragan las redes

--- a/index.html
+++ b/index.html
@@ -101,8 +101,24 @@
     </div>
 </div>
 <footer>
+    <div class="redes_container">
+        <a href="">
+
+            <img src="./src/iconos/FB.png" alt="">
+        </a>
+        <a href="">
+
+            <img src="./src/iconos/IG.png" alt="">
+        </a>
+        <a href="">
+
+            <img src="./src/iconos/WTPA.png" alt="">
+        </a>
+
+    </div>
+
     <div class="footer__map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m 4!1m8!1m3!1d15908.329313050948!2d-74.1420495!3d4.5792363!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9f2530556cd1%3A0xf17bcdac15eaaa83!2sCasa%20de%20la%20Cultura%20de%20Tunjuelito!5e0!3m2!1ses-419!2sco!4v1701005167796!5m2!1ses-419!2sco" width="600" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m 4!1m8!1m3!1d15908.329313050948!2d-74.1420495!3d4.5792363!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9f2530556cd1%3A0xf17bcdac15eaaa83!2sCasa%20de%20la%20Cultura%20de%20Tunjuelito!5e0!3m2!1ses-419!2sco!4v1701005167796!5m2!1ses-419!2sco" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
     </div>
 
