--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
             <img src="./src/iconos/FB.png" alt="">
         </a>
-        <a href="">
+        <a href="https://www.instagram.com/mom_mamitas/">
 
             <img src="./src/iconos/IG.png" alt="">
         </a>
