--- a/index.html
+++ b/index.html
@@ -14,15 +14,12 @@
 <body class="container">
     <header class="header">
         <div class="redes_container">
-            <a href="">
-
-                <img src="./src/iconos/FB.png" alt="">
-            </a>
+           
             <a href="https://www.instagram.com/mom_mamitas/">
 
                 <img src="./src/iconos/IG.png" alt="">
             </a>
-            <a href="">
+            <a href="https://wa.me/573144368101?text=Ayudamos%20a%20mamitas%20como%20tu!!%0ANos%20encanta%20que%20te%20comuniques%20con%20nosotros,%20%0APresiona%201%20si%20estas%20interesada%20en%20los%20cursos.%0APresiona%202%20si%20estas%20interesada%20en%20el%20servicio%20de%20psicolog%C3%ADa%20%0APresiona%203%20si%20estas%20interesado%20en%20obtener%20otra%20informaci%C3%B3n">
 
                 <img src="./src/iconos/WTPA.png" alt="">
             </a>
@@ -32,7 +29,7 @@
         <nav class="menu">
             <a class="inicio  " href="#inicio">
                 <img class="buton_menu" src="./src/home/inicio.png" alt="" /></a>
-            <a class="nosotros  " href="#Nosotros">
+            <a class="nosotros  " href="./page/nosotros.html">
                 <img class="buton_menu" src="./src/home/nosotros.png" alt="" />
 
                 <a class="cursos " href="#Cursos">
@@ -74,19 +71,19 @@
 
     </div>
 
-    <a href="">
+    <a href="https://wa.me/573144368101?text=Ayudamos%20a%20mamitas%20como%20tu!!%0ANos%20encanta%20que%20te%20comuniques%20con%20nosotros,%20%0APresiona%201%20si%20estas%20interesada%20en%20los%20cursos.%0APresiona%202%20si%20estas%20interesada%20en%20el%20servicio%20de%20psicolog%C3%ADa%20%0APresiona%203%20si%20estas%20interesado%20en%20obtener%20otra%20informaci%C3%B3n">
         <div class="cards">
 
         </div>
     </a>
 
-    <a href="">
+    <a href="https://wa.me/573144368101?text=Ayudamos%20a%20mamitas%20como%20tu!!%0ANos%20encanta%20que%20te%20comuniques%20con%20nosotros,%20%0APresiona%201%20si%20estas%20interesada%20en%20los%20cursos.%0APresiona%202%20si%20estas%20interesada%20en%20el%20servicio%20de%20psicolog%C3%ADa%20%0APresiona%203%20si%20estas%20interesado%20en%20obtener%20otra%20informaci%C3%B3n">
         <div>
             <img id="donaciones" class="donaciones" src="./src/donaciones/donacion1.jpg" alt="">
         </div>
     </a>
 
-    <a href="">
+    <a href="https://wa.me/573144368101?text=Ayudamos%20a%20mamitas%20como%20tu!!%0ANos%20encanta%20que%20te%20comuniques%20con%20nosotros,%20%0APresiona%201%20si%20estas%20interesada%20en%20los%20cursos.%0APresiona%202%20si%20estas%20interesada%20en%20el%20servicio%20de%20psicolog%C3%ADa%20%0APresiona%203%20si%20estas%20interesado%20en%20obtener%20otra%20informaci%C3%B3n">
         <div>
             <img class="donaciones" src="./src/ilustraciones/ilustracion1.jpg" alt="">
         </div>
@@ -100,19 +97,19 @@
     <div class="logos">
 
         <div>
-            <a href="#">
+            <a href="http://www.tunjuelito.gov.co/">
                 <img class="logo" src="./src/logos/logo1.png" alt="donaciones">
             </a>
         </div>
 
         <div>
-            <a href="#">
+            <a href="https://manzanasdelcuidado.gov.co/bus-rural/">
                 <img class="logo" src="./src/logos/logo2.png" alt="donaciones">
             </a>
         </div>
 
         <div>
-            <a href="#">
+            <a href="https://sena.territorio.la/cms/index.php">
                 <img class="logo" src="./src/logos/logo3.png" alt="donaciones">
             </a>
 
@@ -120,15 +117,13 @@
     </div>
     <footer>
         <div class="redes_container">
-            <a href="">
-
-                <img src="./src/iconos/FB.png" alt="">
-            </a>
+          
             <a href="https://www.instagram.com/mom_mamitas/">
 
                 <img src="./src/iconos/IG.png" alt="">
             </a>
-            <a href="">
+            <a href="https://wa.me/573144368101?text=Ayudamos%20a%20mamitas%20como%20tu!!%0ANos%20encanta%20que%20te%20comuniques%20con%20nosotros,%20%0APresiona%201%20si%20estas%20interesada%20en%20los%20cursos.%0APresiona%202%20si%20estas%20interesada%20en%20el%20servicio%20de%20psicolog%C3%ADa%20%0APresiona%203%20si%20estas%20interesado%20en%20obtener%20otra%20informaci%C3%B3n">
+
 
                 <img src="./src/iconos/WTPA.png" alt="">
             </a>
