add proyecto libro

--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 <body class="container">
     <header class="header">
         <div class="redes_container">
-           
+
             <a href="https://www.instagram.com/mom_mamitas/">
 
                 <img src="./src/iconos/IG.png" alt="">
             </a>
-            <a href="https://wa.me/573144368101?text=Ayudamos%20a%20mamitas%20como%20tu!!%0ANos%20encanta%20que%20te%20comuniques%20con%20nosotros,%20%0APresiona%201%20si%20estas%20interesada%20en%20los%20cursos.%0APresiona%202%20si%20estas%20interesada%20en%20el%20servicio%20de%20psicolog%C3%ADa%20%0APresiona%203%20si%20estas%20interesado%20en%20obtener%20otra%20informaci%C3%B3n">
+            <a
+                href="https://wa.me/573144368101?text=Ayudamos%20a%20mamitas%20como%20tu!!%0ANos%20encanta%20que%20te%20comuniques%20con%20nosotros,%20%0APresiona%201%20si%20estas%20interesada%20en%20los%20cursos.%0APresiona%202%20si%20estas%20interesada%20en%20el%20servicio%20de%20psicolog%C3%ADa%20%0APresiona%203%20si%20estas%20interesado%20en%20obtener%20otra%20informaci%C3%B3n">
 
                 <img src="./src/iconos/WTPA.png" alt="">
             </a>
@@ -36,6 +37,8 @@
                     <img class="buton_menu" src="./src/home/cursos.png" alt="" /></a>
                 <a class="donaciones " href="#donaciones">
                     <img class="buton_menu" src="./src/home/donar.png" alt="" /></a>
+                <a class="donaciones " href="https://www.flipsnack.com/tarjetaparalafamiliarestrepo/mom/full-view.html">
+                    <img class="buton_menu" src="./src/home/proyecto.jpeg" alt="" /></a>
         </nav>
     </header>
 
@@ -71,19 +74,22 @@
 
     </div>
 
-    <a href="https://wa.me/573144368101?text=Ayudamos%20a%20mamitas%20como%20tu!!%0ANos%20encanta%20que%20te%20comuniques%20con%20nosotros,%20%0APresiona%201%20si%20estas%20interesada%20en%20los%20cursos.%0APresiona%202%20si%20estas%20interesada%20en%20el%20servicio%20de%20psicolog%C3%ADa%20%0APresiona%203%20si%20estas%20interesado%20en%20obtener%20otra%20informaci%C3%B3n">
+    <a
+        href="https://wa.me/573144368101?text=Ayudamos%20a%20mamitas%20como%20tu!!%0ANos%20encanta%20que%20te%20comuniques%20con%20nosotros,%20%0APresiona%201%20si%20estas%20interesada%20en%20los%20cursos.%0APresiona%202%20si%20estas%20interesada%20en%20el%20servicio%20de%20psicolog%C3%ADa%20%0APresiona%203%20si%20estas%20interesado%20en%20obtener%20otra%20informaci%C3%B3n">
         <div class="cards">
 
         </div>
     </a>
 
-    <a href="https://wa.me/573144368101?text=Ayudamos%20a%20mamitas%20como%20tu!!%0ANos%20encanta%20que%20te%20comuniques%20con%20nosotros,%20%0APresiona%201%20si%20estas%20interesada%20en%20los%20cursos.%0APresiona%202%20si%20estas%20interesada%20en%20el%20servicio%20de%20psicolog%C3%ADa%20%0APresiona%203%20si%20estas%20interesado%20en%20obtener%20otra%20informaci%C3%B3n">
+    <a
+        href="https://wa.me/573144368101?text=Ayudamos%20a%20mamitas%20como%20tu!!%0ANos%20encanta%20que%20te%20comuniques%20con%20nosotros,%20%0APresiona%201%20si%20estas%20interesada%20en%20los%20cursos.%0APresiona%202%20si%20estas%20interesada%20en%20el%20servicio%20de%20psicolog%C3%ADa%20%0APresiona%203%20si%20estas%20interesado%20en%20obtener%20otra%20informaci%C3%B3n">
         <div>
             <img id="donaciones" class="donaciones" src="./src/donaciones/donacion1.jpg" alt="">
         </div>
     </a>
 
-    <a href="https://wa.me/573144368101?text=Ayudamos%20a%20mamitas%20como%20tu!!%0ANos%20encanta%20que%20te%20comuniques%20con%20nosotros,%20%0APresiona%201%20si%20estas%20interesada%20en%20los%20cursos.%0APresiona%202%20si%20estas%20interesada%20en%20el%20servicio%20de%20psicolog%C3%ADa%20%0APresiona%203%20si%20estas%20interesado%20en%20obtener%20otra%20informaci%C3%B3n">
+    <a
+        href="https://wa.me/573144368101?text=Ayudamos%20a%20mamitas%20como%20tu!!%0ANos%20encanta%20que%20te%20comuniques%20con%20nosotros,%20%0APresiona%201%20si%20estas%20interesada%20en%20los%20cursos.%0APresiona%202%20si%20estas%20interesada%20en%20el%20servicio%20de%20psicolog%C3%ADa%20%0APresiona%203%20si%20estas%20interesado%20en%20obtener%20otra%20informaci%C3%B3n">
         <div>
             <img class="donaciones" src="./src/ilustraciones/ilustracion1.jpg" alt="">
         </div>
@@ -117,12 +123,13 @@
     </div>
     <footer>
         <div class="redes_container">
-          
+
             <a href="https://www.instagram.com/mom_mamitas/">
 
                 <img src="./src/iconos/IG.png" alt="">
             </a>
-            <a href="https://wa.me/573144368101?text=Ayudamos%20a%20mamitas%20como%20tu!!%0ANos%20encanta%20que%20te%20comuniques%20con%20nosotros,%20%0APresiona%201%20si%20estas%20interesada%20en%20los%20cursos.%0APresiona%202%20si%20estas%20interesada%20en%20el%20servicio%20de%20psicolog%C3%ADa%20%0APresiona%203%20si%20estas%20interesado%20en%20obtener%20otra%20informaci%C3%B3n">
+            <a
+                href="https://wa.me/573144368101?text=Ayudamos%20a%20mamitas%20como%20tu!!%0ANos%20encanta%20que%20te%20comuniques%20con%20nosotros,%20%0APresiona%201%20si%20estas%20interesada%20en%20los%20cursos.%0APresiona%202%20si%20estas%20interesada%20en%20el%20servicio%20de%20psicolog%C3%ADa%20%0APresiona%203%20si%20estas%20interesado%20en%20obtener%20otra%20informaci%C3%B3n">
 
 
                 <img src="./src/iconos/WTPA.png" alt="">
@@ -131,7 +138,10 @@
         </div>
 
         <div class="footer__map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15908.329313050948!2d-74.1420495!3d4.5792363!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9f2530556cd1%3A0xf17bcdac15eaaa83!2sCasa%20de%20la%20Cultura%20de%20Tunjuelito!5e0!3m2!1ses-419!2sco!4v1701057182982!5m2!1ses-419!2sco"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15908.329313050948!2d-74.1420495!3d4.5792363!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9f2530556cd1%3A0xf17bcdac15eaaa83!2sCasa%20de%20la%20Cultura%20de%20Tunjuelito!5e0!3m2!1ses-419!2sco!4v1701057182982!5m2!1ses-419!2sco"
+                style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
 
         </div>
 
